# ds-pc2

./: .gitignore  README.md  pyproject.toml
examples/: demo_factory.py  demo_singleton.py
saferoute/: factory.py  singleton.py
tests/: test_patterns.py
